--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "eslint": "^6.6.0",
     "mocha": "^6.2.2",
     "nodemon": "^2.0.0"
   }
