--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "passport-oauth2-refresh": "^1.1.0",
     "pg": "^7.14.0",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.2"
+    "sequelize": "^5.21.2",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
