--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "passport-google-oauth": "^2.0.0",
     "pg": "^7.14.0",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.2",
-    "uuid": "^3.3.3"
+    "sequelize": "^5.21.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
