--- a/example.env
+++ b/example.env
@@ -1,11 +1,4 @@
 PORT=
 NODE_ENV=
-SECRET=
-DB_NAME=
-DB_USERNAME=
-DB_PASSWORD=
-DB_PORT=
-DB_DIALECT=
-DB_HOST=
 OAUTH_CLIENT_ID=
-OAUTH_CLIENT_SECRET=
+OAUTH_API_KEY=
