--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
   "homepage": "https://github.com/denis-onder/google-calendar-api#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.17.0",
+    "google-auth-library": "^5.5.1",
+    "googleapis": "^45.0.0",
     "helmet": "^3.21.2",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
